src/objects/Green_Circle_Response__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Green Circle Responses</relationshipLabel>
        <relationshipName>Green_Circle_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Green Circle Responses</relationshipLabel>
        <relationshipName>Green_Circle_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <label>Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>How_Often_Do_You_Use_The_GC__c</fullName>
        <label>How Often Do You Use The GC?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Every day</fullName>
                </value>
                <value>
                    <fullName>Once per week</fullName>
                </value>
                <value>
                    <fullName>Once per month</fullName>
                </value>
                <value>
                    <fullName>Once per quarter</fullName>
                </value>
                <value>
                    <fullName>Rarely</fullName>
                </value>
                <value>
                    <fullName>Never</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Green Circle Response</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Green Circle Response Autonumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Green Circle Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>